--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -74,6 +74,8 @@ li {
   margin-left: 700px;
   border-radius: 15px;
   display: block;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 #contact input {
   display: flex;
